--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       <nav class="navbar navbar-default navbar-static-top">
         <div class="container">
           <div class="navbar-header"> 
-            <a class="navbar-brand">
+            <a class="navbar-brand" href='https://dailytimemanager.firebaseapp.com/'>
               <b><font color='black'>
               Daily Time Management 
               &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
